# engr1101-labs

./: .gitignore  main.py  pyproject.toml
baseball_elimination/: baseball_elimination_lab.ipynb  max_flow.py
basic_bipartite_matching/: basic_bipartite_matching_lab.ipynb  bipartite_matching_helpers.py  bipartite_matching_lab.ipynb  taxi_assignment_helpers.py
bipartite_matching/: bipartite_matching.py  bipartite_matching_lab.ipynb
branch_and_bound/: branch_and_bound_lab.ipynb
diet/: diet_lab.ipynb
diet/data/diet_cereal/: cereal_foods.csv
fws/: fws_lab.ipynb  fws_lab_key.ipynb
game_theory/: game_theory_lab.ipynb
game_theory/penaltykickgame/: penalty_kick_automated_game.py
game_theory/penaltykickgame/gamefigures/: game_stats_figure_1.py
lp_formulation/: lp_formulation_lab.ipynb
maximum_flow/: max_flow.py  maximum_flow_lab.ipynb
min-cost_flow/: min-cost_flow_lab.ipynb
minimum_cut/: max_flow.py  minimum_cut_lab.ipynb
minimum_spanning_tree/: minimum_spanning_tree_lab.ipynb
project_selection/: project_selection_lab.ipynb
seat_packing/: clustering.py  seat_packing_lab.ipynb
shortest_path/: graph_tools.py  shortest_path_lab.ipynb
shortest_path/data/: nyc_links.csv
simplex/: simplex_lab.ipynb
transportation/: transportation_lab.ipynb
traveling_salesman_problem/: traveling_salesman_problem_lab.ipynb  tsp.py
tsp_integer_programming/: tsp_integer_programming_lab.ipynb
