[project]
name = "jhub-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "vinal>=0.0.7",
]
